--- a/vsftpd/templates/default/vsftpd.conf.erb
+++ b/vsftpd/templates/default/vsftpd.conf.erb
@@ -143,7 +143,7 @@ pam_service_name=vsftpd
 # encrypted connections.
 rsa_cert_file=/etc/ssl/private/vsftpd.pem
 
-pasv_max_port=51000
-pasv_min_port=50000
-port_enable=YES
-pasv_enable=YES
+#pasv_max_port=51000
+#pasv_min_port=50000
+#port_enable=YES
+#pasv_enable=YES
